src/objects/Qtr_Review__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>AcctPlan__r.Account__r.Id</formula>
        <inlineHelpText>Account ID from Account for syncing report data</inlineHelpText>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>AcctPlan__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctPlan__c</fullName>
        <inlineHelpText>Account Plan to which this quarterly review is related. Click to return to the account plan.</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>Qtr_Review_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Americas_Acct_Mgr__c</fullName>
        <formula>AcctPlan__r.Americas_Account_Manager__r.First_Name__c  + &quot; &quot; + AcctPlan__r.Americas_Account_Manager__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Americas Acct Mgr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <formula>IMAGE(&apos;resource/QuarterlyReviewBanner&apos;, &apos;Quarterly Review&apos;,30, 550)</formula>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_In_Numbers__c</fullName>
        <defaultValue>&quot;US 866-203-6896 &quot;  &amp; BR() &amp;

&quot;Outside US: +1-213-443-4990&quot;</defaultValue>
        <label>Call In Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Feedback__c</fullName>
        <inlineHelpText>Please provide the results of latest client satisfaction survey</inlineHelpText>
        <label>Client Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conference_Access_Code__c</fullName>
        <inlineHelpText>Enter the access code for the conference call</inlineHelpText>
        <label>Conference Access Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_DSO_Number_of_Days__c</fullName>
        <inlineHelpText>Enter current DSO (days sales outstanding) for this account. Goal is 70 days.</inlineHelpText>
        <label>Current DSO Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Account_Manager__c</fullName>
        <formula>AcctPlan__r.Global_Account_Manager__r.First_Name__c   + &quot; &quot; + AcctPlan__r.Global_Account_Manager__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leader_PIN__c</fullName>
        <inlineHelpText>Enter Leader PIN for the Account Review conference call</inlineHelpText>
        <label>Leader PIN</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>Account needs, growth plans, client busuiness outlook, etc.</inlineHelpText>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant_Names__c</fullName>
        <label>Participant Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  Id ,  TEXT(Review_Period__c) ,&apos;_top&apos;)</formula>
        <label>Quarterly Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Account_Manager__c</fullName>
        <formula>AcctPlan__r.Regional_Account_Manager__r.First_Name__c + &quot; &quot; +   AcctPlan__r.Regional_Account_Manager__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Period__c</fullName>
        <inlineHelpText>Please select the period being reviewed.</inlineHelpText>
        <label>Review Period</label>
        <picklist>
            <picklistValues>
                <fullName>FY14 - Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY14 - Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY14 - Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY14 - Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY15 - Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY15 - Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY15 - Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY15 - Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SH_E_Notes__c</fullName>
        <inlineHelpText>SH&amp;E Incidents and significant near-misses since last review</inlineHelpText>
        <label>SH&amp;E Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>View_Bookings_Forecast__c</fullName>
        <description>Link to a report in the Embedded Reports folder</description>
        <formula>HYPERLINK(&quot;/00Oa0000007wncA?pv0=&quot;+Account_ID__c, &quot;Display opportunities with estimated book dates in the current fiscal year&quot;, &quot;_top&quot;)</formula>
        <inlineHelpText>Click to open, or right click and open in a new window to see graph and supporting data.</inlineHelpText>
        <label>View Bookings Forecast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Capture_Rate__c</fullName>
        <formula>HYPERLINK(&quot;/00Oa0000007v8Au?pv0=&quot;+Account_ID__c, &quot;Display capture rate graph and data for this account (current and previous fiscal year)&quot;, &quot;_top&quot;)</formula>
        <inlineHelpText>Click to open, or right click and open in a new window to see graph and supporting data.</inlineHelpText>
        <label>View Capture Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Hit_Rate__c</fullName>
        <formula>HYPERLINK(&quot;/00Oa0000007wozy?pv0=&quot;+Account_ID__c, &quot;Display hit rate graph and data for this account (current and previous fiscal year)&quot;, &quot;_top&quot;)</formula>
        <inlineHelpText>Click to open, or right click and open in a new window to see graph and supporting data.</inlineHelpText>
        <label>View Hit Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Key_Opportunities__c</fullName>
        <description>Passes parameter to get report</description>
        <formula>HYPERLINK(&quot;/00Oa0000007w57G?pv0=&quot;+Account_ID__c, &quot;Display current opportunities for this account with value &gt;$1 million or &apos;Must Win&apos; checked&quot;, &quot;_top&quot;)</formula>
        <inlineHelpText>Click to open, or right click and open in a new window to see graph and supporting data.</inlineHelpText>
        <label>View Key Opportunities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Loss_Analysis__c</fullName>
        <formula>HYPERLINK(&quot;/00Oa0000007wnbH?pv0=&quot;+Account_ID__c, &quot;Display account opportunities lost during the current and previous fiscal year&quot;, &quot;_top&quot;)</formula>
        <inlineHelpText>Click to open, or right click and open in a new window to see graph and supporting data.</inlineHelpText>
        <label>View Loss Analysis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Opportunity_Backlog__c</fullName>
        <description>Passes parameter to get report</description>
        <formula>HYPERLINK(&quot;/00Oa0000007wIYR?pv0=&quot;+Account_ID__c, &quot;Display a report of all current opportunities for this account&quot;, &quot;_top&quot;)</formula>
        <inlineHelpText>Click to open, or right click and open in a new window to see graph and supporting data.</inlineHelpText>
        <label>View Opportunity Backlog</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Bookings__c</fullName>
        <description>Total YTD Bookings for this Quarter (all geographies)</description>
        <inlineHelpText>Total YTD Bookings for this Quarter (all geographies)</inlineHelpText>
        <label>YTD Bookings</label>
        <summarizedField>Quarterly_Financials__c.YTD_Bookings__c</summarizedField>
        <summaryForeignKey>Quarterly_Financials__c.Quarterly_Review__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>YTD_Gross_Revenue__c</fullName>
        <description>Total YTD Gross Revenue for this Quarter (all geographies)</description>
        <inlineHelpText>Total YTD Gross Revenue for this Quarter (all geographies)</inlineHelpText>
        <label>YTD Gross Revenue</label>
        <summarizedField>Quarterly_Financials__c.YTD_Gross_Revenue__c</summarizedField>
        <summaryForeignKey>Quarterly_Financials__c.Quarterly_Review__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>YTD_Net_Revenue__c</fullName>
        <description>Total YTD Net Revenue for this Quarter (all geographies)</description>
        <inlineHelpText>Total YTD Net Revenue for this Quarter (all geographies)</inlineHelpText>
        <label>YTD Net Revenue</label>
        <summarizedField>Quarterly_Financials__c.YTD_Net_Revenue__c</summarizedField>
        <summaryForeignKey>Quarterly_Financials__c.Quarterly_Review__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Quarterly Reviews</label>
    <nameField>
        <displayFormat>Qtr-{0000000}</displayFormat>
        <label>Qtr Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarterly Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>